--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     </figure>
     <!-- changed div to main -->
     <main> 
-         <div class="search-engine-optimization">
+         <section class="search-engine-optimization">
             <!-- made image visible, changed the file path(got rid of ./ and removed images folder path-directly to assets) -->
             <img src="assets/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </section>
         <div id="online-reputation-management" class="online-reputation-management">
             <!-- made image visible, changed file path and added alt tags -->
             <img src="assets/reputation-management.jpg"alt="online-reputation-management" class="float-right" />
